Labb1 criterias done

--- a/om.html
+++ b/om.html
@@ -7,13 +7,14 @@
     <link href="om.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>The Super Snail</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
-        <a href="/">Hem</a>
-        <a href="/om" class="active">Projektdagbok</a>
+        <a href="index.html">Hem</a>
+        <a href="om.html" class="active">Projektdagbok</a>
         <a>Projektdagbok</a>
-        <a>Kurshemsida</a>
+        <a href="http://weber.itn.liu.se/~nikro27/tnmk30-2018/" target="_blank">Kurshemsida</a>
     </header>
 
     <div id="frontimg">
@@ -22,29 +23,33 @@
         <div class="container divided">
             <div class="left">
                 <h1>Om Projektet</h1>
-                <p class="maintext">
+                <p>
                     Detta projekt är del av kursen Digitala Medier (TNM088) på Linköpings Universitet Campus Norrköping. 
                     Kursen är den del av Civilingenjörsprogrammet i Medieteknik. 
 
                     <h3>Tidsplan</h3>
                     <table>
                         <tr>
-                            <th>Firstname</th>
-                            <th>Lastname</th>
-                            <th>Age</th>
+                            <th>Uppgift</th>
+                            <th>Kommentar</th>
+                            <th>Datum</th>
                         </tr>
                         <tr>
-                            <td>Jill</td>
-                            <td>Smith</td>
-                            <td>50</td>
+                            <td>Projektplan</td>
+                            <td>Första inlämning</td>
+                            <td>14/11</td>
                         </tr>
                         <tr>
-                            <td>Eve</td>
-                            <td>Jackson</td>
-                            <td>94</td>
+                            <td>Projektrapport</td>
+                            <td>Slutlig inlämning</td>
+                            <td>12/12</td>
+                        </tr>
+                        <tr>
+                            <td>Seminarie</td>
+                            <td>Slutligt seminarie med projektredovisning</td>
+                            <td>13/12</td>
                         </tr>
                     </table>
-                </p>
             </div>
             <div class="right">
                 <h4>Projektmedlemmar</h4>
@@ -59,7 +64,7 @@
     </div>
 
     <footer>
-        <p>Credits</p>
+        <p>© Jakob Unnebäck & Josefine Klintberg 2018</p>
     </footer>
 
 </body>
