--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link href="Style.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>The Super Snail</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
         <a href="/" class="active">Hem</a>
-        <a href="/om">Projektdagbok</a>
+        <a href="om.html">Projektdagbok</a>
         <a>Projektdagbok</a>
-        <a href="https://liu.se/studieinfo/kurs/tnm088/ht-2019">Kurshemsida</a>
+        <a href="http://weber.itn.liu.se/~nikro27/tnmk30-2018/" target="_blank">Kurshemsida</a>
     </header>
 
     <div id="frontimg">
@@ -20,14 +21,13 @@
     <div class="content">
         <div class="container">
             <h1>Projekthemsida - Grupp 6</h1>
-            <p class="maintext">
+            <p>
                 Detta är en projekthemsida för grupp 6 i kursen Digitala Medier på Linköpings Universitet. 
                 Vårt projekt går ut på att skapa en animerad film som centrerar kring en snigel. 
                 Vi kommer att använda 3D programmet Blender för att skapa våra karaktärer och miljöer
-                samt animera. Slutliga uppdateringar görs i Adobe After Effects. 
-            </p>
-            <p>
-                Projektarbetet på 3 hp motsvarar ca 80 timmars total arbetstid per person, inkluderat projektredovisningen och kursens schemalagda tillfällen under läsperioden.
+                samt animera. Slutliga uppdateringar görs i Adobe After Effects. Projektarbetet på 3 hp 
+                motsvarar ca 80 timmars total arbetstid per person, inkluderat projektredovisningen
+                och kursens schemalagda tillfällen under läsperioden.
                 Det avslutade projektet redovisas torsdag 13:e december genom en muntlig presentation.
             </p>
         </div>
