--- a/om.html
+++ b/om.html
@@ -8,15 +8,17 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>The Super Snail</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
-<body>
+<body onload="init()">
     <header>
+        <a onclick="toggleHeader()" id="toggle"><i class="fas fa-bars"></i></a>
         <a href="index.html">Hem</a>
-        <a href="om.html" class="active">Projektdagbok</a>
+        <a href="om.html" class="active">Om projektet</a>
         <a>Projektdagbok</a>
         <a href="http://weber.itn.liu.se/~nikro27/tnmk30-2018/" target="_blank">Kurshemsida</a>
+        <div id="time"></div>
     </header>
-
     <div id="frontimg">
     </div>
     <div class="content">
@@ -66,6 +68,6 @@
     <footer>
         <p>© Jakob Unnebäck & Josefine Klintberg 2018</p>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
