fixed light mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body onload="init()">
     <header>
         <a onclick="toggleHeader()" id="toggle"><i class="fas fa-bars"></i></a>
+        <a onclick="toggleTheme()">Ändra tema</a>
         <a href="index.html" class="active">Hem</a>
         <a href="om.html">Om projektet</a>
         <a>Projektdagbok</a>
