--- a/om.html
+++ b/om.html
@@ -13,6 +13,7 @@
 <body onload="init()">
     <header>
         <a onclick="toggleHeader()" id="toggle"><i class="fas fa-bars"></i></a>
+        <a onclick="toggleTheme()">Ändra tema</a>
         <a href="index.html">Hem</a>
         <a href="om.html" class="active">Om projektet</a>
         <a>Projektdagbok</a>
