--- a/om.html
+++ b/om.html
@@ -16,7 +16,7 @@
         <a onclick="toggleTheme()">Ändra tema</a>
         <a href="index.html">Hem</a>
         <a href="om.html" class="active">Om projektet</a>
-        <a>Projektdagbok</a>
+        <a href="projektdagbok.html">Projektdagbok</a>
         <a href="http://weber.itn.liu.se/~nikro27/tnmk30-2018/" target="_blank">Kurshemsida</a>
         <div id="time"></div>
     </header>
