--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a onclick="toggleTheme()">Ändra tema</a>
         <a href="index.html" class="active">Hem</a>
         <a href="om.html">Om projektet</a>
-        <a>Projektdagbok</a>
+        <a href="projektdagbok.html">Projektdagbok</a>
         <a href="http://weber.itn.liu.se/~nikro27/tnmk30-2018/" target="_blank">Kurshemsida</a>
         <div id="time"></div>
     </header>
