--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="om.html">Om projektet</a>
         <a href="projektdagbok.php">Projektdagbok</a>
         <a href="http://weber.itn.liu.se/~nikro27/tnmk30-2018/" target="_blank">Kurshemsida</a>
+        <a href="lego.php">Labb 5</a>
         <div id="time"></div>
     </header>
     <div id="frontimg">
